// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ConnectivityMode should render default state for ConnectivityMode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form>
      <div
        class="bp3-form-group"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey900 StyledProps--margin-bottom-small"
              >
                common.connectThroughPlatform
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
              >
                common.connectThroughPlatformInfo
              </p>
              <img
                src="test-file-stub"
                width="100%"
              />
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey900 StyledProps--margin-bottom-small"
              >
                common.connectThroughDelegate
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
              >
                common.connectThroughDelegateInfo
              </p>
              <img
                src="test-file-stub"
                width="100%"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test ConnectivityMode should render delegate state for ConnectivityMode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form>
      <div
        class="bp3-form-group"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey900 StyledProps--margin-bottom-small"
              >
                common.connectThroughDelegate
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
              >
                common.connectThroughDelegateInfo
              </p>
              <img
                src="test-file-stub"
                width="100%"
              />
            </div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main CollapsableSelect--closeChangeBtn StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
              data-testid="collapsable-select-change"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="Edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Change
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test ConnectivityMode should render manager state for ConnectivityMode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form>
      <div
        class="bp3-form-group"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h6 StyledProps--color StyledProps--color-grey900 StyledProps--margin-bottom-small"
              >
                common.connectThroughPlatform
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
              >
                common.connectThroughPlatformInfo
              </p>
              <img
                src="test-file-stub"
                width="100%"
              />
            </div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main CollapsableSelect--closeChangeBtn StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
              data-testid="collapsable-select-change"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="Edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Change
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
